# watax

./: .gitignore  README.md  taupkg.toml  test_features.tr
.github/workflows/: build.yml
benchmarks/: README.md  loadtest.py  results.md  run_all.ps1  run_all.sh
benchmarks/axum_app/: Cargo.toml
benchmarks/axum_app/src/: main.rs
benchmarks/fastapi_app/: main.py
benchmarks/watax_app/src/: main.tr
docs/: 01-getting-started.md  02-routing.md  03-requests.md  04-responses.md  05-middleware.md  06-templates.md  07-static-files.md  08-json.md  09-websockets.md  10-servers.md  11-configuration.md  12-testing.md  13-memory.md  14-cheatsheet.md  README.md
example/app/: README.md  taupkg.toml
example/app/src/: main.tr  note.tr  store.tr
example/app/static/css/: style.css
example/app/static/js/: app.js
example/app/templates/: 404.html  about.html  index.html  layout.html
public/: index.html
scripts/: push-benchmark-results.ps1  push-benchmark-results.sh
src/: app.tr  config.tr  http_ext.tr  json_ext.tr  main.tr  middleware.tr  multipart.tr  reactor.tr  route.tr  static_files.tr  template_ext.tr  test_client.tr  test_mp.tr  threaded.tr  tls.tr  watax.tr  websocket.tr
