[package]
name = "axum_app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "axum_bench"
path = "src/main.rs"

[dependencies]
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body = "1"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
bytes = "1"

[profile.release]
opt-level = 3
